--- a/Wheels.html
+++ b/Wheels.html
@@ -71,7 +71,7 @@
   </div>
   <div>
     <img src="Alloy Wheels.jpg" alt="Car 2" width="200" height="150">
-    <h3>Suspension</h3>
+    <h3>Alloy wheel</h3>
     <p> Price: 15000 </p>
  
   </div>
