--- a/Wheels.html
+++ b/Wheels.html
@@ -63,27 +63,27 @@
 </div>
 <div id="content">
   <div>
-    <img src="wheels.jpg" alt="Car 1" width="200" height="150">
+    <img src="wheels.jpg" alt="wheels 1" width="200" height="150">
     <h3>Alloy wheels</h3>
     <p> Price: 10,000 </p>
     <!-- <a href="car1.html"> Learn More </a> -->
     
   </div>
   <div>
-    <img src="Alloy Wheels.jpg" alt="Car 2" width="200" height="150">
-    <h3>Alloy wheel</h3>
+    <img src="Alloy Wheels.jpg" alt="wheels 2" width="200" height="150">
+    <h3>Alloy Wheels</h3>
     <p> Price: 15000 </p>
  
   </div>
   <!-- <div>
-    <img src="civic.jpg" alt="Car 3" width="200" height="150">
+    <img src="civic.jpg" alt="wheels 3" width="200" height="150">
     <h3> Honda Civic </h3>
     <p> Price: 8.7 Lakhs</p>
  
   </div> -->
 </div>
 <div id="footer">
-  <p> Copyright &copy; 2020 Buy Used Cars. All rights reserved. </p>
+  <p> Copyright &copy; 2020 Buy Used wheels. All rights reserved. </p>
 </div>
 
 </body>
