--- a/spares.html
+++ b/spares.html
@@ -75,9 +75,9 @@
     <p> Price: 15000 </p>
  
   </div>
-  <!-- <div>
-    <img src="civic.jpg" alt="Car 3" width="200" height="150">
-    <h3> Honda Civic </h3>
+  <div>
+    <img src="Engine.jpg" alt="Car 3" width="200" height="150">
+    <h3> Engine V8 </h3>
     <p> Price: 8.7 Lakhs</p>
  
   </div> -->
