--- a/Wheels.html
+++ b/Wheels.html
@@ -65,14 +65,14 @@
   <div>
     <img src="wheels.jpg" alt="wheels 1" width="200" height="150">
     <h3>Alloy wheels</h3>
-    <p> Price: 10,000 </p>
+    <p> Price: $10,000 </p>
     <!-- <a href="car1.html"> Learn More </a> -->
     
   </div>
   <div>
     <img src="Alloy Wheels.jpg" alt="wheels 2" width="200" height="150">
     <h3>Alloy Wheels</h3>
-    <p> Price: 15000 </p>
+    <p> Price: $15000 </p>
  
   </div>
   <!-- <div>
