--- a/Engine.html
+++ b/Engine.html
@@ -65,14 +65,14 @@
   <div>
     <img src="Engine part.png" alt="Engine 1" width="200" height="150">
     <h3>Engine v6</h3>
-    <p> Price: 80,000 </p>
+    <p> Price: $80,000 </p>
     <!-- <a href="car1.html"> Learn More </a> -->
     
   </div>
   <div>
     <img src="Engine.jpg" alt="Engine 2" width="200" height="150">
     <h3>Engine v8</h3>
-    <p> Price: 95,000 </p>
+    <p> Price: $95,000 </p>
  
   </div>
   <!-- <div>
