--- a/spares.html
+++ b/spares.html
@@ -65,7 +65,7 @@
   <div>
     <img src="wheels.jpg" alt="Car 1" width="200" height="150">
     <h3>Alloy wheels</h3>
-    <p> Price: 10,000 </p>
+    <p> Price: $10,000 </p>
 	<p> Available: 50 wheels are Available</p>
     <!-- <a href="car1.html"> Learn More </a> -->
     
@@ -73,14 +73,14 @@
   <div>
     <img src="Suspension.jpg" alt="Car 2" width="200" height="150">
     <h3>Suspension</h3>
-    <p> Price: 15000 </p>
+    <p> Price: $15000 </p>
 	<p> Available: 30 Suspension are Available</p>
  
   </div>
   <div>
     <img src="Engine.jpg" alt="Car 3" width="200" height="150">
     <h3> Engine V8 </h3>
-    <p> Price: 8.7 Lakhs</p>
+    <p> Price: $870,000 </p>
 	<p> Available: 20 Engines are Available</p>
  
   
