--- a/Bags.html
+++ b/Bags.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Cars & spare parts  </title>
+<title> Bags & Leather Bags </title>
 <style type="text/css">
 #body {
 	background-color: #f1f3f5;
@@ -50,7 +50,7 @@
 
 <body id="body">
 <div id="heading">
-  <h1> Bags & Leather bags  </h1>
+  <h1> Bags & Leather Bags  </h1>
 </div>
 <div id="subheading">
   <h2> Welcome to  Bags </h2>
